21.10.2010  Toolbar1 usage of Q3ListBox changed to QTableWidget. (p4.0.3 Tim)
20.10.2010
      * Fixed: cmake should work now. (T356)
        - Changed the QT4_WRAP_UI3 macro to generate  <filename>.h  instead of  ui_<filename>.h
        - In /muse/CMakeLists.txt, included all the uic generated headers paths (the 'build' paths). 
        - Tested OK with fresh svn pull.
19.10.2010
      * Fixed: Some missing files, errors with cmake build. (T356)
19.10.2010
      * Changed: Build system changed to cmake. (T356)
        - Some other suitable changes. p4.0.2
        - WIP Need to fix a few placed in code with regards to installation search paths (MESS synths not found etc.)
        - Choose suitable version number. Currently left at 2.0.1 
        - Maybe a few other things. Change name of prog so as not to conflict with existing muse installation? etc. etc.
        - Default install location is /usr/local. Be careful not to overwrite an existing working muse-1 !
16.10.2010
      * Fixed: Routing and popup menus should work now. Sorry, no 'stay-open' menus for now. (T356)
        - p4.0.1 Reverted back to regular non-overloaded Q3PopupMenu behaviour (self-extinguishing) for PopupMenu class.
        - Removed "gRoutingMenuMap.clear()" and "gRoutingPopupMenuMaster = 0" from MusE::routingPopupMenuAboutToHide().
          Instead, added protection from non-visible menu in MusE::updateRouteMenus().
      * Tested: Pianoroll, drums open but toolbars are very messed up. Marker, transport, bigtime, all others seem OK.    
15.10.2010
      * Feature: Unified Jack midi devices in midi ports list. Can be both input and output, just like ALSA devices. (T356)
        - Marked as p3.3.55 
      * Corrected: Three things which did not compile in conversion to new muse-2: (T356) 
        - <string>true</string> -> <bool>true</bool> in mtrackinfobase.ui, for recEchoButton toggleButton property. (T356)