@@ -8,8 +8,11 @@
 #ifndef __TB1_H__
 #define __TB1_H__
 
-#include <qwidget.h>
+//#include <qwidget.h>
 #include <q3toolbar.h>
+
+#include <QWidget>      // p4.0.4
+//#include <QToolBar>     //
 
 class PosLabel;
 class PitchLabel;
@@ -22,6 +25,7 @@ class QToolButton;
 //---------------------------------------------------------
 
 class Toolbar1 : public Q3ToolBar {
+//class Toolbar1 : public QToolBar {       // p4.0.4
       QToolButton* solo;
       PosLabel* pos;
       PitchLabel* pitch;
@@ -44,13 +48,12 @@ class Toolbar1 : public Q3ToolBar {
    signals:
       void rasterChanged(int);
       void quantChanged(int);
-      //void rasterChanged(int, int);  // p4.0.3
-      //void quantChanged(int, int);   //
       void soloChanged(bool);
       void toChanged(int);
 
    public:
       Toolbar1(Q3MainWindow* parent, int r=96,
+      //Toolbar1(QWidget* parent, int r=96,     // p4.0.4
          int q=96, bool showPitch=true);
       void setSolo(bool val);
       void setPitchMode(bool flag);
