@@ -1,4 +1,5 @@
 21.10.2010  Toolbar1 usage of Q3ListBox changed to QTableWidget. (p4.0.3 Tim)
+            More Toolbar1 fixes. (p4.0.4 Tim)
 20.10.2010
       * Fixed: cmake should work now. (T356)
         - Changed the QT4_WRAP_UI3 macro to generate  <filename>.h  instead of  ui_<filename>.h
